--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: bestshoes-api
   datasource:
-    url:
-    password:
-    username: postgres
+    url: jdbc:postgresql://localhost:5432/bestshoes
+    password: Password@1234
+    username: root
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
