--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
   jackson:
     deserialization:
       fail-on-unknown-properties: true
+  jwt:
+    secret: ${JWT_SECRET}
 logging:
   level:
     org.springframework.security: DEBUG
