--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
       fail-on-unknown-properties: true
   jwt:
     secret: ${JWT_SECRET}
+    accessTokenExpiration: 300 # 5 min
+    refreshTokenExpiration: 604800 # 1 week
 logging:
   level:
     org.springframework.security: DEBUG
