--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,13 @@
             <version>0.12.5</version>
         </dependency>
 
+        <!--        spring doc -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.14</version>
+        </dependency>
+
 
     </dependencies>
 
