--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,17 @@
             <version>2.8.14</version>
         </dependency>
 
+        <!--        kafka -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
