--- a/.github/workflows/build-test-bestshoes-api.yml
+++ b/.github/workflows/build-test-bestshoes-api.yml
@@ -20,4 +20,4 @@ jobs:
           cache: maven
 
       - name: Build and run tests
-        run: mvn clean verify
+        run: mvn clean package -DskipTests
